--- a/www/css/index.css
+++ b/www/css/index.css
@@ -394,268 +394,312 @@ Mixins & Extensions
 /* = Base
 -------------------------------------------------------------------------------------------------------------------- */
 /*  LIST VIEW WITH NOTCHES */
-[data-role=listview] {
-  list-style: none; }
+/*
+[data-role=listview]{
+  list-style:none;
+}
 
-[data-role=listview] li {
-  font-size: 1.2rem;
-  font-family: "Francois One", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  padding: 0.5rem 2rem;
-  width: 85%;
-  background-color: #CCCCCC;
-  border-top: 1px solid #FFFFFF;
-  border-bottom: 1px solid #000000;
-  text-align: center; }
-
-[data-role=overlay] {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.82); }
-
-[data-role=modal] {
-  position: fixed;
-  top: 10%;
-  left: 5%;
+[data-role=listview] li{
+    font-size: 1.2rem;
+    font-family:$font-primary;
+    line-height: 1.5;
+    padding:0.5rem 2rem;
+    width: 85%;
+    background-color: $lightgrey;
+    border-top:1px solid $white;
+    border-bottom: 1px solid $black;
+	text-align:center;
+}
+ 
+[data-role=overlay]{
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:10;
+  height:100%;
+  width:100%;
+  background-color: rgba(0,0,0,0.82);
+}
+[data-role=modal]{
+  position:fixed;
+  top:10%;
+  left:5%;
   width: 75%;
-  z-index: 15;
-  max-height: 80%;
-  padding: 5vh;
-  border: 1px solid #333;
-  min-height: 10%;
-  color: #fff;
-  background-color: #7F7F7F;
-  box-shadow: 1px 1px 2px black; }
+  z-index:15;
+  max-height:80%;
+  padding:5vh;
+  border:1px solid #333;
+  min-height:10%;
+  color:#fff;
+  background-color:$darkgrey;
+  box-shadow:1px 1px 2px rgb(0,0,0);
+}
 
-#mapoutput {
-  width: 350px;
-  height: 500px; }
-
+#mapoutput
+{
+	width: 350px;
+	height: 500px;
+}
+*/
 /*************************************
         Forms
 *************************************/
-.formBox {
+/*
+.formBox{
   width: 16rem;
-  padding: .2rem 1rem; }
+  padding: .2rem 1rem;
+}
 
-.formBox2 {
+.formBox2{
   width: 16rem;
-  text-align: center; }
+  text-align: center;
+}
 
 label {
-  float: left;
-  text-align: right;
-  width: 5rem;
-  margin-right: 1rem;
-  font-familty: "Francois One", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: .6rem;
-  line-height: .8rem;
-  vertical-align: middle;
-  color: #FFFFFF; }
+	float: left;
+	text-align: right;
+	width: 5rem;
+	margin-right: 1rem;
+	font-familty: $font-primary;
+	font-size: .6rem;
+	line-height: .8rem;
+	vertical-align: middle;
+	color: $white;	
+}
 
-::-webkit-input-placeholder {
-  color: #000000; }
+::-webkit-input-placeholder { color: $black; }
+::-moz-placeholder { color: $black; }	
+:-ms-input-placeholder {color: $black; }
+input:-moz-placeholder {color: $black; }
 
-::-moz-placeholder {
-  color: #000000; }
-
-:-ms-input-placeholder {
-  color: #000000; }
-
-input:-moz-placeholder {
-  color: #000000; }
-
-input, select {
+input, select{
   line-height: .8rem;
   font-size: .6rem;
-  padding: 0 .5rem;
-  max-width: 100%;
-  font-family: "Francois One", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding:0 .5rem;
+  max-width:100%;
+  font-family: $font-primary;
   vertical-align: middle;
-  color: #FFFFFF;
-  width: 6.5rem; }
+  color: $white;
+  width: 6.5rem;
+}
 
-.narrow {
-  width: 2rem; }
 
-.btn {
-  width: auto; }
 
-.med {
-  width: 10rem; }
-
-.lg {
-  width: 25rem; }
-
-.xlg {
-  width: 40rem; }
-
-* {
-  padding: 0;
-  margin: 0; }
-
-html {
-  width: 100%;
-  height: 100%;
-  background-color: #333;
-  overflow: hidden;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation; }
+.narrow{
+  width:2rem;
+}
+.btn{
+  width:auto;
+}
+.med{
+  width:10rem;
+}
+.lg{
+  width:25rem;
+}
+.xlg{
+  width:40rem;
+}
+ 
+ 
+*{
+	padding:0;
+	margin:0;
+		
+}
+html{
+	width:100%;
+	height:100%;
+    background-color:#333;
+    overflow:hidden;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+}
 
 body {
-  height: 100%; }
+	height: 100%;
+}
 
-h2, h3 {
-  font-family: "Bree Serif", "Georgia", Cambria, Times New Roman, Times, serif;
-  padding: 0.2rem 2rem;
-  font-size: 1.2rem; }
+h2, h3{
+	font-family:$font-secondary;
+	padding:0.2rem 2rem;
+	font-size: 1.2rem;
+}
 
 p, ul.desc {
-  font-family: "Francois One", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: .8rem;
-  margin-left: 2rem;
-  margin-right: 2rem; }
-
+	font-family:$font-primary;
+	font-size: .8rem;
+	margin-left: 2rem;
+	margin-right: 2rem;
+}
+*/
 /********************************
         TABS
 ********************************/
-ul.tabs {
-  width: 100%;
-  height: 3rem;
-  /*margin-bottom:30px;*/ }
+/*
+ul.tabs{
+	width:100%;
+	height:3rem;
 
-.tabs li.tab {
-  background: #7F7F7F !important;
-  float: left;
-  display: inline-block;
-  width: 33.333%; }
-
-.tabs li.tab a {
-  display: block;
-  padding: 0.5rem 2rem;
-  font-size: 2rem;
-  line-height: 2rem;
-  height: 3rem;
-  color: #fff;
-  text-decoration: none;
-  border: none;
-  background-color: #CCCCCC !important;
-  text-align: center;
-  border-top: 1px solid #7F7F7F !important;
-  border-right: 1px solid #7F7F7F !important;
-  border-left: 1px solid #7F7F7F !important; }
-
-.tabs li.tab a.activetab {
-  background-color: #7F7F7F !important;
-  border-top: 1px solid #7F7F7F !important;
-  border-right: 1px solid #7F7F7F !important;
-  border-left: 1px solid #7F7F7F !important; }
-
+}
+.tabs li.tab{
+	background:$darkgrey !important;
+	float:left; 
+	display:inline-block;
+	width:33.333%;
+}
+.tabs li.tab a{
+	display: block;
+	padding: 0.5rem 2rem;
+	font-size: 2rem;
+	line-height: 2rem;
+	height: 3rem;
+	color: #fff;
+	text-decoration: none;
+	border: none;
+	background-color: $lightgrey !important;
+	text-align: center;
+	border-top:1px solid $darkgrey !important;
+	border-right:1px solid $darkgrey !important;
+	border-left:1px solid $darkgrey !important;
+}
+.tabs li.tab a.activetab{
+	background-color:$darkgrey !important;
+	border-top:1px solid $darkgrey !important;
+	border-right:1px solid $darkgrey !important;
+	border-left:1px solid $darkgrey !important;
+}
+*/
 /********************************
         PAGES
 ********************************/
-[data-role="page"] {
-  /*display:none;*/
-  /*background-color:$black;*/
-  color: #000000;
-  /*width:100%;*/
-  padding-bottom: 60px;
-  position: absolute;
-  top: 3.1rem;
-  margin-top: -1px;
-  /*left: 100%;*/
-  /*right: -10px;*/
-  /*transition: left 0.5s linear,
-  		  right 0.5s linear; */
-  z-index: 10;
-  /*** Items to trigger hardware acceleration ***/
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000;
-  -moz-perspective: 1000;
-  -ms-perspective: 1000;
-  perspective: 1000;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); }
+/*
+[data-role="page"]{
 
-[data-role=page].active {
+	color: $black;	
+
+	padding-bottom: 60px;
+	position:absolute; 
+	top: 3.1rem; 	
+	margin-top: -1px;
+
+	z-index: 10;
+
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-perspective: 1000;
+	-moz-perspective: 1000;
+	-ms-perspective: 1000;
+	perspective: 1000;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	-ms-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);  
+}
+[data-role=page].active{ 
   left: 0;
   right: 0;
   z-index: 5;
   padding-bottom: 60px;
-  /*background-color:$white;*/
-  /*border-top:1px solid #lightgrey;*/ }
 
-[data-role=page].show {
-  display: block; }
-
-[data-role=page].hidden {
-  display: none; }
-
-div#home {
-  display: block; }
-
-[data-role="header"] {
-  background-color: #6998FF; }
-
-[data-role="header"] h1 {
+}
+[data-role=page].show{
+  display:block;
+}
+[data-role=page].hidden{
+  display:none;
+}
+div#home{
+	display:block;	
+}
+[data-role="header"]{
+	background-color: $primary_color;
+}
+[data-role="header"] h1{
   font-size: 1.5rem;
-  text-shadow: 2px 2px 2px #CCCCCC;
-  padding: 0.4rem;
-  color: #000000;
-  text-align: center;
-  letter-spacing: 0.2rem;
+  text-shadow: 2px 2px 2px $lightgrey;
+  padding:0.4rem;
+  color: $black;
+  text-align:center;
+  letter-spacing:0.2rem;
   word-spacing: 0.7rem;
-  font-variant: small-caps;
-  font-family: "Bree Serif", "Georgia", Cambria, Times New Roman, Times, serif; }
-
+  font-variant:small-caps;
+  font-family:$font-secondary;
+}
 [data-role="footer"] {
-  background-color: #6998FF;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  z-index: 100; }
+	background-color: $primary_color;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	z-index: 100;
+}
 
 [data-role="footer"] h3 {
-  color: #000000;
-  text-align: center; }
+	color: $black;
+	text-align: center;
+}
 
 [data-role="header"] h3 {
-  color: #6998FF;
-  text-align: center; }
+	color: $primary-color;
+	text-align: center;
+}
 
-[data-role="content"] {
+[data-role="content"]{
   margin-top: -1px;
-  border-top: 1px solid #666;
-  /* to match the top of the active tab */ }
+	border-top:1px solid #666;	
 
-[data-role="content"] p:last-child {
-  padding-bottom: 0rem; }
-
+}
+[data-role="content"] p:last-child{
+	padding-bottom:0rem;
+}
+*/
 /*** ICONS  ****/
+/*
 #hometab {
-  background: url("../img/home.png") no-repeat 50% 50%;
-  background-size: 3rem 3rem;
-  text-align: center; }
+	background: url("../img/home.png") no-repeat 50% 50%;
+	background-size: 3rem 3rem;
+	text-align: center;	
+}
 
 #geotab {
-  background: url("../img/compass.png") no-repeat 50% 50%;
-  background-size: 3rem 3rem;
-  text-align: center; }
+	background: url("../img/compass.png") no-repeat 50% 50%;
+	background-size: 3rem 3rem;
+	text-align: center;
+}
 
 #contacttab {
-  background: url("../img/contacts.png") no-repeat 50% 50%;
-  background-size: 3rem 3rem;
-  text-align: center; }
+	background: url("../img/contacts.png") no-repeat 50% 50%;
+	background-size: 3rem 3rem;
+	text-align: center;
+}
+*/
+* {
+  outline: solid red 1px; }
+
+#wrapper {
+  max-width: 100%;
+  height: 90%; }
+
+#leftside {
+  width: 50%; }
+
+#rightside {
+  width: 50%;
+  float: left; }
+
+#right1, #right2, #right3, #right4 {
+  display: block; }
+
+#navigation {
+  float: left;
+  max-width: 100%;
+  height: 10%; }
+
+#lefttab, #righttab {
+  width: 50%; }
 
 /* = Buttons
 -------------------------------------------------------------------------------------------------------------------- */
