--- a/platforms/android/assets/www/scss/_base.scss
+++ b/platforms/android/assets/www/scss/_base.scss
@@ -283,184 +283,63 @@ div#home{
 }
 */
 * {
-	padding:0;
-	margin:0;
+	outline: solid red 1px;
 }
 
 #wrapper {
-	max-width: 1024px;
-	max-height: 600px;
+	width: 100%;
+	
 }
 
 #leftside {
-	width: 66.66%;
+	width: 50%;
 	float: left;
-	background-color:#B8BBBB;
 }
 
 #rightside {
-	margin-top: 30px;
-	width: 33.33%;
+	width: 50%;
 	float: left;
-	background-color:#B8BBBB;
 }
 
-#right1 {
-	outline: 1px solid $darkgrey;
-	
-}
-#right1, #right2 {
-	width: 19em;
+#right1, #right2, #right3, #right4 {
 	display: block;
-	@include verticalSpaced(500,.50);	
+	height: 25%;
 }
 
 #navigation {
 	float: left;
-	max-width: 1024px;	
+	max-width: 100%;
+	height: 10%;	
 }
 
 #lefttab, #righttab {
-	max-width: 512px;
-	width: 508px;
-	height: 60px;
-	float: left;
-	border-top:1px solid $lightgrey !important;
-	border-right:1px solid $black !important;
-	border-left:1px solid $lightgrey !important;
-	border-bottom:1px solid $black !important;
+	width: 50%;	
 }
 
-#lefttab {
-	background: url("../img/list.png") no-repeat 25% 75%;
-	background-size: 2.5rem 2.5rem;
-	background-color: $darkgrey;
-}
-
-#righttab {
-	background: url("../img/camera.png") no-repeat 25% 75%;
-	background-size: 2.5rem 2.5rem;
-	background-color: $darkgrey;	
-}
 
 p{
   padding:1rem 2rem;
-  margin:1rem 2rem;
-  text-align: center;
 }
-#r1,#r2 {
-  padding: 0.5rem 2rem;
-  margin: 1rem 2rem;	
-}
-
 button{
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
   margin: 1rem 2rem;
 }
 #t{
-  width: 13rem;
+  width: 20rem;
   font-size: 1rem;
   padding: 0.25rem 1rem;
   margin:1rem 2rem;
 }
-#full{
-  width:500px;
+#c{
+  width:800px;
   height:600px;
   background-color:#ccc;
   border:1px dashed #999;
-  margin: 1rem;
-  float: left;
-}
-
-#thumb{
-  width:180px;
-  height:300px;
-  background-color:#ccc;
-  border:1px dashed #999;
-  margin: 1rem;
-  float: left;
+  margin: 2rem;
 }
 #thumbnail{
   margin:3rem;
   width:100%;
   word-wrap: break-word;
   overflow-wrap: break-word;
-}
-
-[data-role="page"]{
-	width: 1024px;
-	height: 600px;
-	background-color:#B8BBBB;
-	padding-bottom: 40px;
-	position:absolute; 
-	top: 3.0rem; 	
-	/*margin-top: -1px;*/
-	z-index: 10;
-	/*** Items to trigger hardware acceleration ***/
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	-ms-backface-visibility: hidden;
-	backface-visibility: hidden;
-	-webkit-perspective: 1000;
-	-moz-perspective: 1000;
-	-ms-perspective: 1000;
-	perspective: 1000;
-	-webkit-transform: translate3d(0, 0, 0);
-	-moz-transform: translate3d(0, 0, 0);
-	-ms-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);  
-}
-[data-role=page].active{ 
-  left: 0;
-  right: 0;
-  z-index: 5;
-  padding-bottom: 60px;
-}
-
-[data-role="header"]{
-	background-color: $primary_color;
-}
-[data-role="header"] h1{
-  font-size: 1.5rem;
-  text-shadow: 2px 2px 2px $lightgrey;
-  padding:0.4rem;
-  color: $black;
-  text-align:center;
-  letter-spacing:0.2rem;
-  word-spacing: 0.7rem;
-  font-variant:small-caps;
-  font-family:$font-secondary;
-}
-[data-role="footer"] {
-	background-color: $primary_color;
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	height: 40px;
-	z-index: 100;
-}
-
-[data-role="footer"] h3 {
-  font-size: 1.2rem;
-  text-shadow: 2px 2px 2px $lightgrey;
-  padding:0.3rem;
-  color: $black;
-  text-align:center;
-  letter-spacing:0.2rem;
-  word-spacing: 0.7rem;
-  font-variant:small-caps;
-  font-family:$font-secondary;
-}
-
-#list, #camera {
-  font-size: 1.2rem;
-  text-shadow: 2px 2px 2px $lightgrey;
-  margin-top: .6rem;
-  padding:0.3rem;
-  color: $white;
-  text-align:center;
-  letter-spacing:0.2rem;
-  word-spacing: 0.7rem;
-  font-variant:small-caps;
-  font-family:$font-primary;	
 }
