tuesday at 3 commit

--- a/platforms/android/assets/www/scss/_mixins.scss
+++ b/platforms/android/assets/www/scss/_mixins.scss
@@ -13,6 +13,10 @@ Mixins & Extensions
 	}
 }
 
+@mixin verticalSpaced($screen_size,$percentage) {
+	height: ($screen_size * $percentage) + px;
+}
+
 // ----------------- //
 //  clearfix
 //  @extend .clearfix;
