--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -7,13 +7,19 @@
     <feature name="Device">
         <param name="android-package" value="org.apache.cordova.device.Device" />
     </feature>
-    <name>Photofinal</name>
+    <icon density="mdpi" src="www/icons/plogo_mdpi_48x48.png" />
+    <icon density="hdpi" src="www/icons/plogo_hdpi_72x72.png" />
+    <icon density="xhdpi" src="www/icons/plogo_xhdpi_96x96.png" />
+    <icon density="xxhdpi" src="www/icons/plogo_xxhdpi.png" />
+    <name>Paul and Anna Final Project</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+        An Apache Cordova application that takes and displays photos.
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+    <author email="harv0116@algonquinlive.com">
+        Paul Harvey and Anna Ioudovskaya
     </author>
     <content src="index.html" />
     <access origin="*" />
+    <preference name="Fullscreen" value="true" />
+    <preference name="orientation" value="landscape" />
 </widget>
