--- a/www/css/index.css
+++ b/www/css/index.css
@@ -681,8 +681,8 @@ div#home{
   margin: 0; }
 
 #wrapper {
-  max-width: 1024px;
-  max-height: 600px; }
+  max-width: 1280px;
+  max-height: 560px; }
 
 #leftside {
   width: 66.66%;
@@ -705,11 +705,11 @@ div#home{
 
 #navigation {
   float: left;
-  max-width: 1024px; }
+  max-width: 1280px; }
 
 #lefttab, #righttab {
-  max-width: 512px;
-  width: 508px;
+  max-width: 1280px;
+  width: 638px;
   height: 60px;
   float: left;
   border-top: 1px solid #CCCCCC !important;
@@ -747,20 +747,18 @@ button {
   margin: 1rem 2rem; }
 
 #full {
-  width: 500px;
-  height: 600px;
+  width: 600px;
+  height: 400px;
   background-color: #ccc;
   border: 1px dashed #999;
-  margin: 1rem;
-  float: left; }
+  margin: 1rem; }
 
 #thumb {
   width: 180px;
-  height: 300px;
+  height: 100px;
   background-color: #ccc;
   border: 1px dashed #999;
-  margin: 1rem;
-  float: left; }
+  margin: 1rem; }
 
 #thumbnail {
   margin: 3rem;
@@ -769,8 +767,8 @@ button {
   overflow-wrap: break-word; }
 
 [data-role="page"] {
-  width: 1024px;
-  height: 600px;
+  width: 1280px;
+  height: 560px;
   background-color: #B8BBBB;
   padding-bottom: 40px;
   position: absolute;
