--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -383,12 +383,12 @@ th {
 Mixins & Extensions
 
 ******************************************************************/
-.clearfix, .row {
+.clearfix, .col-container {
   *zoom: 1; }
-  .clearfix:before, .row:before, .clearfix:after, .row:after {
+  .clearfix:before, .col-container:before, .clearfix:after, .col-container:after {
     content: " ";
     display: table; }
-  .clearfix:after, .row:after {
+  .clearfix:after, .col-container:after {
     clear: both; }
 
 /* = Base
@@ -770,7 +770,7 @@ button {
   width: 1280px;
   height: 560px;
   background-color: #B8BBBB;
-  padding-bottom: 40px;
+  padding-bottom: 110px;
   position: absolute;
   top: 3.0rem;
   /*margin-top: -1px;*/
@@ -795,6 +795,9 @@ button {
   z-index: 5;
   padding-bottom: 60px; }
 
+[data-role="content"] {
+  overflow: auto; }
+
 [data-role="header"] {
   background-color: #6998FF; }
 
@@ -814,7 +817,7 @@ button {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 40px;
+  height: 110px;
   z-index: 100; }
 
 [data-role="footer"] h3 {
@@ -840,44 +843,108 @@ button {
   font-variant: small-caps;
   font-family: "Francois One", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
+[data-role=modal] {
+  display: none;
+  position: fixed;
+  top: auto;
+  left: 20%;
+  margin: auto;
+  width: auto;
+  padding: 5px;
+  z-index: 15;
+  padding: 5vh;
+  border: 1px solid #333;
+  min-height: 10%;
+  color: #fff;
+  background-color: #666;
+  box-shadow: 1px 1px 2px black;
+  border-radius: 5px;
+  -webkit-transition-property: background;
+  -webkit-transition-duration: 0.8s;
+  -webkit-transition-timing-function: ease-in-out; }
+
+[data-role=modal]:focus {
+  -webkit-transition-property: background;
+  -webkit-transition-duration: 0.8s;
+  -webkit-transition-timing-function: ease-in; }
+
+ul li {
+  list-style-type: none; }
+
+input[type="button"] {
+  background-color: #6998FF;
+  color: #FFF;
+  border: #84D0D7 1px solid;
+  font-weight: 800; }
+
+input {
+  line-height: 1.6rem;
+  font-size: 1.2rem;
+  padding: 0 1rem;
+  max-width: 90%; }
+
+.button {
+  width: auto; }
+
+[data-role=overlay] {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.82); }
+
 /* = Buttons
 -------------------------------------------------------------------------------------------------------------------- */
 /*@import 'buttons';*/
 /* = Grid
 -------------------------------------------------------------------------------------------------------------------- */
-.tabbar {
-  max-width: 400px;
-  margin: 0 auto; }
+.container {
+  max-width: 600px;
+  background-color: #abc;
+  margin: 5% auto; }
+
+.col-container {
+  padding-bottom: 5px; }
+
+.col-2 {
+  background: #333;
+  min-height: 100px;
+  float: left;
+  width: 47.5%;
+  margin-left: 5%; }
+  .col-2:first-child {
+    margin-left: 0; }
 
 .col-3 {
-  text-align: center;
-  height: 4rem;
-  width: 133.33333px;
-  margin-left: 0px;
-  float: left; }
+  background: #333;
+  min-height: 100px;
+  float: left;
+  width: 32%;
+  margin-left: 2%; }
   .col-3:first-child {
     margin-left: 0; }
 
-@media only screen and (min-width: 400px) {
-  /* no change */ }
-@media only screen and (min-width: 600px) {
-  .tabbar {
-    max-width: 600px; }
+.col-4 {
+  min-height: 100px;
+  float: left;
+  border: 1px solid #333;
+  margin-bottom: 0.5rem;
+  margin-right: 0.2rem;
+  background-color: #D5DBEF;
+  width: 25%;
+  margin-left: 0%; }
+  .col-4:first-child {
+    margin-left: 0; }
 
-  .col-3 {
-    width: 200px;
-    margin-left: 0px; }
-    .col-3:first-child {
-      margin-left: 0; } }
-@media only screen and (min-width: 1024px) {
-  .tabbar {
-    max-width: 1024px; }
+.col-4 > img {
+  border-radius: 2px; }
 
-  .col-3 {
-    width: 341.33333px;
-    margin-left: 0px; }
-    .col-3:first-child {
-      margin-left: 0; } }
+.col-4 > img, .col-4 > input[type="button"] {
+  margin: auto;
+  display: block; }
+
 /* = Sticky-Footer
 -------------------------------------------------------------------------------------------------------------------- */
 /*@import 'sticky-footer';*/
