--- a/www/scss/_base.scss
+++ b/www/scss/_base.scss
@@ -389,7 +389,7 @@ button{
 	width: 1280px;
 	height: 560px;
 	background-color:#B8BBBB;
-	padding-bottom: 40px;
+	padding-bottom: 110px;
 	position:absolute; 
 	top: 3.0rem; 	
 	/*margin-top: -1px;*/
@@ -415,6 +415,9 @@ button{
   padding-bottom: 60px;
 }
 
+[data-role="content"]{
+	overflow: auto;
+}
 [data-role="header"]{
 	background-color: $primary_color;
 }
@@ -434,7 +437,7 @@ button{
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	height: 40px;
+	height: 110px;
 	z-index: 100;
 }
 
@@ -461,4 +464,65 @@ button{
   word-spacing: 0.7rem;
   font-variant:small-caps;
   font-family:$font-primary;	
+}
+
+[data-role=modal]{
+  display:none;
+  position:fixed;
+  top:auto;
+  left: 20%;
+  margin: auto;
+  //margin-right: auto;
+  width: auto;
+  padding: 5px;
+  z-index:15;
+  //max-width:50%;
+  padding:5vh;
+  border:1px solid #333;
+  min-height:10%;
+  color:#fff;
+  background-color:#666;
+  box-shadow:1px 1px 2px rgb(0,0,0);
+  border-radius: 5px;
+  	-webkit-transition-property: background;
+  -webkit-transition-duration: 0.8s;
+  -webkit-transition-timing-function: ease-in-out;
+}
+[data-role=modal]:focus{
+-webkit-transition-property: background;
+  -webkit-transition-duration: 0.8s;
+  -webkit-transition-timing-function: ease-in;
+}
+
+
+ul li{
+	list-style-type: none;
+}
+
+input[type="button"]
+{
+	background-color:#6998FF;
+	color:#FFF;
+	border:#84D0D7 1px solid;
+	font-weight: 800;
+}
+input{
+  line-height: 1.6rem;
+  font-size: 1.2rem;
+  padding:0 1rem;
+  max-width:90%;
+}
+
+.button {
+	width: auto;
+}
+
+[data-role=overlay]{
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:10;
+  height:100%;
+  width:100%;
+  background-color: rgba(0,0,0,0.82);
 }
