--- a/platforms/android/assets/www/scss/_base.scss
+++ b/platforms/android/assets/www/scss/_base.scss
@@ -1,287 +1,4 @@
-/*  LIST VIEW WITH NOTCHES */
 
-/*
-[data-role=listview]{
-  list-style:none;
-}
-
-[data-role=listview] li{
-    font-size: 1.2rem;
-    font-family:$font-primary;
-    line-height: 1.5;
-    padding:0.5rem 2rem;
-    width: 85%;
-    background-color: $lightgrey;
-    border-top:1px solid $white;
-    border-bottom: 1px solid $black;
-	text-align:center;
-}
- 
-[data-role=overlay]{
-  position:fixed;
-  top:0;
-  left:0;
-  z-index:10;
-  height:100%;
-  width:100%;
-  background-color: rgba(0,0,0,0.82);
-}
-[data-role=modal]{
-  position:fixed;
-  top:10%;
-  left:5%;
-  width: 75%;
-  z-index:15;
-  max-height:80%;
-  padding:5vh;
-  border:1px solid #333;
-  min-height:10%;
-  color:#fff;
-  background-color:$darkgrey;
-  box-shadow:1px 1px 2px rgb(0,0,0);
-}
-
-#mapoutput
-{
-	width: 350px;
-	height: 500px;
-}
-*/
-/*************************************
-        Forms
-*************************************/
-/*
-.formBox{
-  width: 16rem;
-  padding: .2rem 1rem;
-}
-
-.formBox2{
-  width: 16rem;
-  text-align: center;
-}
-
-label {
-	float: left;
-	text-align: right;
-	width: 5rem;
-	margin-right: 1rem;
-	font-familty: $font-primary;
-	font-size: .6rem;
-	line-height: .8rem;
-	vertical-align: middle;
-	color: $white;	
-}
-
-::-webkit-input-placeholder { color: $black; }
-::-moz-placeholder { color: $black; }	
-:-ms-input-placeholder {color: $black; }
-input:-moz-placeholder {color: $black; }
-
-input, select{
-  line-height: .8rem;
-  font-size: .6rem;
-  padding:0 .5rem;
-  max-width:100%;
-  font-family: $font-primary;
-  vertical-align: middle;
-  color: $white;
-  width: 6.5rem;
-}
-
-
-
-.narrow{
-  width:2rem;
-}
-.btn{
-  width:auto;
-}
-.med{
-  width:10rem;
-}
-.lg{
-  width:25rem;
-}
-.xlg{
-  width:40rem;
-}
- 
- 
-*{
-	padding:0;
-	margin:0;
-		
-}
-html{
-	width:100%;
-	height:100%;
-    background-color:#333;
-    overflow:hidden;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-}
-
-body {
-	height: 100%;
-}
-
-h2, h3{
-	font-family:$font-secondary;
-	padding:0.2rem 2rem;
-	font-size: 1.2rem;
-}
-
-p, ul.desc {
-	font-family:$font-primary;
-	font-size: .8rem;
-	margin-left: 2rem;
-	margin-right: 2rem;
-}
-*/
-/********************************
-        TABS
-********************************/
-/*
-ul.tabs{
-	width:100%;
-	height:3rem;
-
-}
-.tabs li.tab{
-	background:$darkgrey !important;
-	float:left; 
-	display:inline-block;
-	width:33.333%;
-}
-.tabs li.tab a{
-	display: block;
-	padding: 0.5rem 2rem;
-	font-size: 2rem;
-	line-height: 2rem;
-	height: 3rem;
-	color: #fff;
-	text-decoration: none;
-	border: none;
-	background-color: $lightgrey !important;
-	text-align: center;
-	border-top:1px solid $darkgrey !important;
-	border-right:1px solid $darkgrey !important;
-	border-left:1px solid $darkgrey !important;
-}
-.tabs li.tab a.activetab{
-	background-color:$darkgrey !important;
-	border-top:1px solid $darkgrey !important;
-	border-right:1px solid $darkgrey !important;
-	border-left:1px solid $darkgrey !important;
-}
-*/
-/********************************
-        PAGES
-********************************/
-/*
-[data-role="page"]{
-
-	color: $black;	
-
-	padding-bottom: 60px;
-	position:absolute; 
-	top: 3.1rem; 	
-	margin-top: -1px;
-
-	z-index: 10;
-
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	-ms-backface-visibility: hidden;
-	backface-visibility: hidden;
-	-webkit-perspective: 1000;
-	-moz-perspective: 1000;
-	-ms-perspective: 1000;
-	perspective: 1000;
-	-webkit-transform: translate3d(0, 0, 0);
-	-moz-transform: translate3d(0, 0, 0);
-	-ms-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);  
-}
-[data-role=page].active{ 
-  left: 0;
-  right: 0;
-  z-index: 5;
-  padding-bottom: 60px;
-
-}
-[data-role=page].show{
-  display:block;
-}
-[data-role=page].hidden{
-  display:none;
-}
-div#home{
-	display:block;	
-}
-[data-role="header"]{
-	background-color: $primary_color;
-}
-[data-role="header"] h1{
-  font-size: 1.5rem;
-  text-shadow: 2px 2px 2px $lightgrey;
-  padding:0.4rem;
-  color: $black;
-  text-align:center;
-  letter-spacing:0.2rem;
-  word-spacing: 0.7rem;
-  font-variant:small-caps;
-  font-family:$font-secondary;
-}
-[data-role="footer"] {
-	background-color: $primary_color;
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	z-index: 100;
-}
-
-[data-role="footer"] h3 {
-	color: $black;
-	text-align: center;
-}
-
-[data-role="header"] h3 {
-	color: $primary-color;
-	text-align: center;
-}
-
-[data-role="content"]{
-  margin-top: -1px;
-	border-top:1px solid #666;	
-
-}
-[data-role="content"] p:last-child{
-	padding-bottom:0rem;
-}
-*/
-/*** ICONS  ****/
-/*
-#hometab {
-	background: url("../img/home.png") no-repeat 50% 50%;
-	background-size: 3rem 3rem;
-	text-align: center;	
-}
-
-#geotab {
-	background: url("../img/compass.png") no-repeat 50% 50%;
-	background-size: 3rem 3rem;
-	text-align: center;
-}
-
-#contacttab {
-	background: url("../img/contacts.png") no-repeat 50% 50%;
-	background-size: 3rem 3rem;
-	text-align: center;
-}
-*/
 * {
 	padding:0;
 	margin:0;
@@ -470,8 +187,8 @@ button{
   display:none;
   position:fixed;
   top:auto;
-  left: 20%;
-  margin: auto;
+  //left: 20%;
+  margin: $margin;
   //margin-right: auto;
   width: auto;
   padding: 5px;
@@ -505,6 +222,9 @@ input[type="button"]
 	color:#FFF;
 	border:#84D0D7 1px solid;
 	font-weight: 800;
+	padding: 0.5rem 1rem;
+  	margin: 1rem 2rem;
+	width: 100%;
 }
 input{
   line-height: 1.6rem;
